lesson_labs/10_Securing_cluster_nodes_and_network/10_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia
  namespace: foo
spec:
  replicas: 3
  template:
    metadata:
      name: kubia
      labels:
        app: kubia
    spec:
      containers:
      - image: petrushevski/kubia:v1
        name: nodejs
  selector:
    matchLabels:
      app: kubia
---
apiVersion: v1
kind: Service
metadata:
  name: kubia
  namespace: foo
spec:
  type: ClusterIP
  selector:
    app: kubia
  ports:
  - port: 80
    targetPort: 8080
