lesson_labs/10_Securing_cluster_nodes_and_network/9_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia
spec:
  replicas: 3
  template:
    metadata:
      name: kubia
      labels:
        app: kubia
    spec:
      containers:
      - image: petrushevski/kubia:v1
        name: nodejs
  selector:
    matchLabels:
      app: kubia
---
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  type: ClusterIP
  selector:
    app: kubia
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia2
spec:
  replicas: 1
  template:
    metadata:
      name: kubia2
      labels:
        app: kubia2
    spec:
      containers:
      - image: petrushevski/kubia:v2
        name: nodejs
  selector:
    matchLabels:
      app: kubia2
