lesson_labs/10_Securing_cluster_nodes_and_network/11_network-policy-default-deny.yaml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: default-deny
# spec:
#   podSelector:
#     # matchLabels:  
#     #   app: kubia
#   ingress: []


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: []

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kubia2-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: kubia2
  # policyTypes:
  # - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: foo             
  - from:
    - podSelector:
          matchLabels:
            app: kubia   
    - ipBlock:
        cidr: 10.244.0.38/32

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kubia-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: kubia
  # policyTypes:
  # - Ingress
  ingress:
  - from:
    - podSelector:
          matchLabels:
            app: kubia2
