lesson_labs/10_Securing_cluster_nodes_and_network/16_network-policy-cidr.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ipblock-netpolicy
  namespace: foo
spec:
  podSelector:
    matchLabels:
      app: shopping-cart
  ingress:
  - from:
    - ipBlock:
        cidr: 10.224.0.28/32
    ports:
    - port: 80
